Cleanup (deprecated API; typos; formatting)
GitOrigin-RevId: 704e0c85ebda1d48ab91185286b9cd6dfc6990f9